# t3-reference

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ECOLOGY.md  TRACE_SCHEMA.md
examples/: generate_trace.py  load_checkpoint.py  run_benchmarks.py  validate_wikitext.py  verify_against_atlas.py
scripts/: prepare_release_checkpoint.py  sweep_traces.py  upload_to_hf.py
t3/: __init__.py  _legacy_chain.py  _legacy_lm_eval.py  _legacy_model.py  _legacy_trace.py  act.py  attention.py  benchmarks.py  chain.py  config.py  ecology.py  model.py  tracing.py
t3/data/: prompts.json
tests/: conftest.py  harness.py  test_benchmarks_api.py  test_config.py  test_harness_self.py  test_load_run3.py  test_tracing.py
